# egnyte-ai-samples

./: README.md
a2a-server/: README.md
a2a-server/samples/python/: pyproject.toml
a2a-server/samples/python/agents/langgraph/: __main__.py  agent.py  agent_executor.py  pyproject.toml
a2a-server/samples/python/common/: types.py
a2a-server/samples/python/common/client/: client.py
a2a-server/samples/python/hosts/cli/: __main__.py  pyproject.toml
