[project]
name = "a2a-samples"
version = "0.1.0"
description = "Agent2Agent samples"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.4",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "hosts"]

[tool.uv.workspace]
members = [
    "agents/langgraph",
    "hosts/cli"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"